--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ git:
 
 env:
   matrix:
-  - TRAVIS_NODE_VERSION="8"
-  - TRAVIS_NODE_VERSION="stable"
+  - TRAVIS_NODE_VERSION="12"
+  - TRAVIS_NODE_VERSION="stable"Hello WorldabvHelloWorldabvHello WorldnihaoHelloWorldnihao1
+  HelloWorldnihao
+
 
 addons:
   apt:
